--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,8 @@ jobs:
       with:
         target: x86_64-unknown-freebsd
     - run: cargo build --release
-    - run: cp target/x86_64-unknown-freebsd/release/rust-koditool ./rust-koditool-freebsd-x86_64
+    - run: cp target/x86_64-unknown-freebsd/release/kodi-random_ep ./rust-kodi-random_ep-freebsd-x86_64
+    - run: cp target/x86_64-unknown-freebsd/release/kodi-tvmode ./rust-kodi-tvmode-freebsd-x86_64
 
     - name: Set release tag
       id: set_tag
@@ -63,7 +64,8 @@ jobs:
       with:
         name: Binaries
         path: |
-          rust-koditool-freebsd-x86_64
+          rust-kodi-random_ep-freebsd-x86_64
+          rust-kodi-tvmode-freebsd-x86_64
 
     - name: Attach binaries to release
       id: attach_artifacts
@@ -89,11 +91,15 @@ jobs:
       with:
         toolchain: stable
 
+    - name: Install OpenSSL Development Packages
+      run: sudo apt-get update && sudo apt-get install -y libssl-dev
+
     - name: Build for Linux x86-64
       run: |
         rustup target add x86_64-unknown-linux-musl
         cargo build --release --target x86_64-unknown-linux-musl
-        cp target/x86_64-unknown-linux-musl/release/rust-koditool ./rust-koditool-linux-x86_64
+        cp target/x86_64-unknown-linux-musl/release/kodi-random_ep ./rust-kodi-random_ep-linux-x86_64
+        cp target/x86_64-unknown-linux-musl/release/kodi-tvmode ./rust-kodi-tvmode-linux-x86_64
 
     - name: Set release tag
       id: set_tag
@@ -112,7 +118,8 @@ jobs:
       with:
         name: Binaries
         path: |
-          rust-koditool-linux-x86_64
+          rust-kodi-random_ep-linux-x86_64
+          rust-kodi-tvmode-linux-x86_64
 
     - name: Attach binaries to release
       id: attach_artifacts
@@ -142,7 +149,8 @@ jobs:
       run: |
         rustup target add x86_64-apple-darwin
         cargo build --release --target x86_64-apple-darwin
-        cp target/x86_64-apple-darwin/release/rust-koditool ./rust-koditool-macos
+        cp target/x86_64-apple-darwin/release/kodi-random_ep ./rust-kodi-random_ep-macos
+        cp target/x86_64-apple-darwin/release/kodi-tvmode ./rust-kodi-tvmode-macos
 
     - name: Set release tag
       id: set_tag
@@ -161,7 +169,8 @@ jobs:
       with:
         name: Binaries
         path: |
-          rust-koditool-macos
+          rust-kodi-random_ep-macos
+          rust-kodi-tvmode-macos
 
     - name: Attach binaries to release
       id: attach_artifacts
