--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,9 @@ jobs:
     - name: Install Rust
       run: rustup update stable
 
+    - name: Install OpenSSL Development Packages
+      run: sudo apt-get update && sudo apt-get install -y libssl-dev
+
     - name: Install cross-compilation tools
       uses: taiki-e/setup-cross-toolchain-action@v1
       with:
