--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -131,10 +131,19 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_release_id.outputs.id }}/assets
-        asset_path: |
-          rust-kodi-random_ep-linux-x86_64
-          rust-kodi-tvmode-linux-x86_64
-        asset_name: ${{ eachFile }}
+        asset_path: rust-kodi-random_ep-linux-x86_64
+        asset_name: rust-kodi-random_ep-linux-x86_64
+        asset_content_type: application/octet-stream
+
+    - name: Attach binaries to release
+      id: attach_artifacts_tvmode
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_release_id.outputs.id }}/assets
+        asset_path: rust-kodi-tvmode-linux-x86_64
+        asset_name: rust-kodi-tvmode-linux-x86_64
         asset_content_type: application/octet-stream
 
   build-macos:
