--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,58 +29,6 @@ jobs:
           draft: false
           prerelease: false
 
-  build-freebsd:
-    runs-on: ubuntu-latest
-    needs: create-release
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Install Rust
-      run: rustup update stable
-
-    - name: Install OpenSSL Development Packages
-      run: sudo apt-get update && sudo apt-get install -y libssl-dev
-
-    - name: Install cross-compilation tools
-      uses: taiki-e/setup-cross-toolchain-action@v1
-      with:
-        target: x86_64-unknown-freebsd
-    - run: cargo build --release
-    - run: cp target/x86_64-unknown-freebsd/release/kodi-random_ep ./rust-koditool-random_ep-freebsd-x86_64
-    - run: cp target/x86_64-unknown-freebsd/release/kodi-tvmode ./rust-koditool-tvmode-freebsd-x86_64
-
-    - name: Set release tag
-      id: set_tag
-      run: |
-        tag=$(git rev-parse --short=8 ${{ github.sha }})
-        echo "::set-output name=tag::${tag}"
-
-    - name: Get release ID
-      id: get_release_id
-      run: echo "::set-output name=id::$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.set_tag.outputs.tag }} | jq -r '.id')"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload binaries
-      uses: actions/upload-artifact@v2
-      with:
-        name: Binaries
-        path: |
-          rust-koditool-random_ep-freebsd-x86_64
-          rust-koditool-tvmode-freebsd-x86_64
-
-    - name: Attach binaries to release
-      id: attach_artifacts
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_release_id.outputs.id }}/assets?name=rust-koditool-freebsd-x86_64
-        asset_path: rust-koditool-freebsd-x86_64
-        asset_name: rust-koditool-freebsd-x86_64
-        asset_content_type: application/octet-stream
-
   build-linux:
     runs-on: ubuntu-latest
     needs: create-release
@@ -268,3 +216,55 @@ jobs:
           rust-koditool-random_ep-windows-x86_64.exe
           rust-koditool-tvmode-windows-x86_64.exe
         asset_content_type: application/octet-stream
+
+#  build-freebsd:
+#    runs-on: ubuntu-latest
+#    needs: create-release
+#
+#    steps:
+#    - uses: actions/checkout@v3
+#
+#    - name: Install Rust
+#      run: rustup update stable
+#
+#    - name: Install OpenSSL Development Packages
+#      run: sudo apt-get update && sudo apt-get install -y libssl-dev
+#
+#    - name: Install cross-compilation tools
+#      uses: taiki-e/setup-cross-toolchain-action@v1
+#      with:
+#        target: x86_64-unknown-freebsd
+#    - run: cargo build --release
+#    - run: cp target/x86_64-unknown-freebsd/release/kodi-random_ep ./rust-koditool-random_ep-freebsd-x86_64
+#    - run: cp target/x86_64-unknown-freebsd/release/kodi-tvmode ./rust-koditool-tvmode-freebsd-x86_64
+#
+#    - name: Set release tag
+#      id: set_tag
+#      run: |
+#        tag=$(git rev-parse --short=8 ${{ github.sha }})
+#        echo "::set-output name=tag::${tag}"
+#
+#    - name: Get release ID
+#      id: get_release_id
+#      run: echo "::set-output name=id::$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.set_tag.outputs.tag }} | jq -r '.id')"
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#    - name: Upload binaries
+#      uses: actions/upload-artifact@v2
+#      with:
+#        name: Binaries
+#        path: |
+#          rust-koditool-random_ep-freebsd-x86_64
+#          rust-koditool-tvmode-freebsd-x86_64
+#
+#    - name: Attach binaries to release
+#      id: attach_artifacts
+#      uses: actions/upload-release-asset@v1
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      with:
+#        upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_release_id.outputs.id }}/assets?name=rust-koditool-freebsd-x86_64
+#        asset_path: rust-koditool-freebsd-x86_64
+#        asset_name: rust-koditool-freebsd-x86_64
+#        asset_content_type: application/octet-stream
