--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,8 +23,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.set_tag.outputs.tag }}
-          release_name: ${{ steps.set_tag.outputs.tag }}
+          tag_name: ${{ env.tag }}
+          release_name: ${{ env.tag }}
           body: ${{ steps.create_release.outputs.message }}
           draft: false
           prerelease: false
