--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
       uses: taiki-e/upload-rust-binary-action@v1
       with:
         bin: rust-koditool-random_ep-linux-x86_64,rust-koditool-tvmode-linux-x86_64
-        ref: ${{ env.set_tag }}
+        ref: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
@@ -73,7 +73,7 @@ jobs:
       uses: taiki-e/upload-rust-binary-action@v1
       with:
         bin: rust-koditool-random_ep-macos,rust-koditool-tvmode-macos
-        ref: ${{ env.set_tag }}
+        ref: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
@@ -94,7 +94,7 @@ jobs:
       uses: taiki-e/upload-rust-binary-action@v1
       with:
         bin: rust-koditool-random_ep-windows-x86_64.exe,rust-koditool-tvmode-windows-x86_64.exe
-        ref: ${{ env.set_tag }}
+        ref: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
 
