--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,34 +6,8 @@ on:
       - main
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Generate Changelog
-        run: echo "# Release Notes" > changelog.txt  # Replace this with your actual changelog content
-
-      - name: Set release tag
-        id: set_tag
-        run: |
-          tag=$(git rev-parse --short=8 ${{ github.sha }})
-          echo "tag=${tag}" >> $GITHUB_ENV
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            changelog.txt
-          body_path: changelog.txt
-          tag_name: ${{ env.tag }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-
   build-linux:
     runs-on: ubuntu-latest
-    needs: create-release
 
     steps:
     - name: Checkout code
@@ -47,17 +21,35 @@ jobs:
     - name: Install OpenSSL Development Packages
       run: sudo apt-get update && sudo apt-get install -y libssl-dev
 
-    - name: Build and upload Linux artifacts
-      id: upload_linux
-      uses: taiki-e/upload-rust-binary-action@v1
+    - name: Set release tag
+      id: set_tag
+      run: |
+        tag=$(git rev-parse --short=8 ${{ github.sha }})
+        echo "tag=${tag}" >> $GITHUB_ENV
+
+    - name: Build for Linux x86-64
+      run: |
+        rustup target add x86_64-unknown-linux-gnu
+        cargo build --release --target x86_64-unknown-linux-gnu
+        cp target/x86_64-unknown-linux-gnu/release/kodi-random_ep ./rust-koditool-random_ep-linux-x86_64
+        cp target/x86_64-unknown-linux-gnu/release/kodi-tvmode ./rust-koditool-tvmode-linux-x86_64
+
+    - name: Generate Changelog
+      run: echo "# Release Notes" > changelog.txt  # Replace this with your actual changelog content
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        bin: rust-koditool-random_ep-linux-x86_64,rust-koditool-tvmode-linux-x86_64
-        ref: ${{ env.tag }}
+        files: |
+          changelog.txt
+          rust-koditool-random_ep-linux-x86_64
+          rust-koditool-tvmode-linux-x86_64
+        body_path: changelog.txt
+        tag_name: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build-macos:
     runs-on: macOS-latest
-    needs: create-release
 
     steps:
     - name: Checkout code
@@ -68,17 +60,35 @@ jobs:
       with:
         toolchain: stable
 
-    - name: Build and upload macOS artifacts
-      id: upload_macos
-      uses: taiki-e/upload-rust-binary-action@v1
+    - name: Set release tag
+      id: set_tag
+      run: |
+        tag=$(git rev-parse --short=8 ${{ github.sha }})
+        echo "tag=${tag}" >> $GITHUB_ENV
+
+    - name: Build for macOS
+      run: |
+        rustup target add x86_64-apple-darwin
+        cargo build --release --target x86_64-apple-darwin
+        cp target/x86_64-apple-darwin/release/kodi-random_ep ./rust-koditool-random_ep-macos
+        cp target/x86_64-apple-darwin/release/kodi-tvmode ./rust-koditool-tvmode-macos
+
+    - name: Generate Changelog
+      run: echo "# Release Notes" > changelog.txt  # Replace this with your actual changelog content
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        bin: rust-koditool-random_ep-macos,rust-koditool-tvmode-macos
-        ref: ${{ env.tag }}
+        files: |
+          changelog.txt
+          rust-koditool-random_ep-macos
+          rust-koditool-tvmode-macos
+        body_path: changelog.txt
+        tag_name: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
     runs-on: windows-latest
-    needs: create-release
 
     steps:
     - name: Checkout code
@@ -89,13 +99,33 @@ jobs:
       with:
         toolchain: stable-msvc
 
-    - name: Build and upload Windows artifacts
-      id: upload_windows
-      uses: taiki-e/upload-rust-binary-action@v1
+    - name: Set release tag
+      id: set_tag
+      run: |
+        tag=$(git rev-parse --short=8 ${{ github.sha }})
+        echo "tag=${tag}" >> $GITHUB_ENV
+
+    - name: Build for Windows x86-64
+      run: |
+        cargo build --release --target x86_64-pc-windows-msvc
+        ls target/x86_64-pc-windows-msvc/release/
+        cp target/x86_64-pc-windows-msvc/release/kodi-random_ep.exe ./rust-koditool-random_ep-windows-x86_64.exe
+        cp target/x86_64-pc-windows-msvc/release/kodi-tvmode.exe ./rust-koditool-tvmode-windows-x86_64.exe
+
+    - name: Generate Changelog
+      run: echo "# Release Notes" > changelog.txt  # Replace this with your actual changelog content
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        bin: rust-koditool-random_ep-windows-x86_64.exe,rust-koditool-tvmode-windows-x86_64.exe
-        ref: ${{ env.tag }}
+        files: |
+          changelog.txt
+          rust-koditool-random_ep-windows-x86_64.exe
+          rust-koditool-tvmode-windows-x86_64.exe
+        body_path: changelog.txt
+        tag_name: ${{ env.tag }}
         token: ${{ secrets.GITHUB_TOKEN }}
+
 
 
 
